# pith-ui

./: .gitignore  .gitmodules  Cargo.toml  HEADLESS-PRINCIPLES.md  LICENSE.md  NOTES.md  README.md  Roadmap.md  cypress.config.js  deny.toml  headless_eval.json  justfile  package-lock.json  package.json  tasks.json
.claude/: CLAUDE.md  settings.json  tester_settings.json
.claude/plans/: cached-chasing-gizmo.md  (+2 more)
.github/: renovate.json
.obsidian/: app.json  community-plugins.json  graph.json  types.json  workspace.json
book/: book.toml
book-examples/leptos/icons/: Cargo.toml
book-examples/leptos/icons/src/: icons.rs
book-examples/leptos/primitives/: Cargo.toml
book-examples/leptos/primitives/src/: aspect_ratio.rs  avatar.rs  checkbox.rs  label.rs  progress.rs  separator.rs  switch.rs  toggle.rs
cardo_themed_app/: Cargo.toml  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
cardo_themed_app/src/: app.rs  main.rs
cardo_themed_app/src/pages/: accessible_icon.rs  accordion.rs  badges.rs  buttons.rs  calendar.rs  card.rs  checkboxes.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  home.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  popover.rs  radio_group.rs  scroll_area.rs  separator.rs  switches.rs  toggle_group.rs  toggles.rs  tooltip.rs
cardo_themed_app/src/theme/: accessible_icon.rs  accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  button.rs  calendar.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  form.rs  hover_card.rs  input.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  one_time_password_field.rs  password_toggle_field.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switch.rs  tabs.rs  textarea.rs  toast.rs  toggle.rs  toggle_group.rs  toolbar.rs  tooltip.rs
cardo_themed_app/style/: base.css  tailwind.css  tokens.css
example/: tailwind.config.ts
notes/: TEMPLATE.md  api-comparison.md  calendar-datepicker-timepicker-research.md  core-number.md  core-primitive.md  core-rect.md  filters.md  leptos-accessible-icon.md  leptos-accordion.md  leptos-alert-dialog.md  leptos-announce.md  leptos-arrow.md  leptos-aspect-ratio.md  leptos-avatar.md  leptos-checkbox.md  leptos-collapsible.md  leptos-collection.md  leptos-combobox.md  leptos-compose-refs.md  leptos-context-menu.md  leptos-context.md  leptos-dialog.md  leptos-direction.md  leptos-dismissable-layer.md  leptos-dropdown-menu.md  leptos-focus-guards.md  leptos-focus-scope.md  leptos-form.md  leptos-hover-card.md  leptos-id.md  leptos-label.md  leptos-menu.md  leptos-menubar.md  leptos-navigation-menu.md  leptos-one-time-password-field.md  leptos-password-toggle-field.md  leptos-popover.md  leptos-popper.md  leptos-portal.md  leptos-presence.md  (+27 more)
pith_themed_app/: Cargo.toml  Trunk.toml  index.html  package.json  pnpm-lock.yaml
pith_themed_app/src/: app.rs  main.rs
pith_themed_app/src/pages/: accessible_icon.rs  accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  buttons.rs  calendar.rs  checkboxes.rs  combobox.rs  context_menu.rs  dropdown_menu.rs  form.rs  hover_card.rs  input.rs  menubar.rs  mod.rs  navigation_menu.rs  one_time_password_field.rs  password_toggle_field.rs  popover.rs  progress.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switches.rs  tabs.rs  textarea.rs  toast.rs  toggle_group.rs  toggles.rs  toolbar.rs  tooltip.rs
pith_themed_app/src/theme/: accessible_icon.rs  accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  button.rs  calendar.rs  card.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  form.rs  hover_card.rs  input.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  one_time_password_field.rs  password_toggle_field.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switch.rs  tabs.rs  toast.rs  toggle.rs  toggle_group.rs  toolbar.rs  tooltip.rs
pith_themed_app/style/: base.css  tailwind.css
reference_app/: CLAUDE.md  cypress.config.js  justfile  notes.md  package.json  pnpm-lock.yaml
reference_app/leptos/: Cargo.toml  Trunk.toml  index.html
reference_app/leptos/src/: app.rs  main.rs  pages.rs
reference_app/leptos/src/pages/: accessible_icon.rs  accordion.rs  alert_dialog.rs  aspect_ratio.rs  attr_forwarding.rs  avatar.rs  calendar.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  dropdown_menu_with_tooltip.rs  form.rs  hover_card.rs  label.rs  menu.rs  menubar.rs  navigation_menu.rs  one_time_password_field.rs  password_toggle_field.rs  popover.rs  popper.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switch.rs  tabs.rs  time_field.rs  toast.rs  toggle.rs  toggle_group.rs  toolbar.rs  tooltip.rs
reference_experiments/: CLAUDE.md  cypress.config.js  package.json  pnpm-lock.yaml
scripts/: Cargo.toml  e2e_priority.py  query_e2e_results.py  save_e2e_results.py  topo_sort.py
stories/leptos/: .gitignore  CLAUDE.md  Cargo.toml  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
stories/leptos/src/: app.rs  main.rs  primitives.rs
stories/leptos/src/primitives/: accessible_icon.rs  accordion.rs  accordion.stories.module.css  alert_dialog.rs  arrow.rs  aspect_ratio.rs  avatar.rs  calendar.rs  calendar.stories.module.css  checkbox.rs  collapsible.rs  collapsible.stories.module.css  collection.rs  combobox.rs  combobox.stories.module.css  context_menu.rs  context_menu.stories.module.css  dialog.rs  dismissable_layer.rs  dropdown_menu.rs  focus_scope.rs  form.rs  hover_card.rs  hover_card.stories.module.css  label.rs  menu.rs  menubar.rs  navigation_menu.rs  navigation_menu.stories.module.css  one_time_password_field.rs  password_toggle_field.rs  popover.rs  popover.stories.module.css  popper.rs  popper.stories.module.css  portal.rs  presence.rs  progress.rs  radio_group.rs  roving_focus.rs  (+20 more)
stories/leptos/style/: bundle.css  collapsible.css  form.css  preview.css  scroll_area.css
(+383 files in other folders)
