[workspace]
members = [
    "book-examples/*/*",
    "packages/colors",
    "packages/icons/*",
    "packages/primitives/core/primitive",
    "packages/primitives/core/rect",
    "packages/primitives/core/utils",
    "packages/primitives/leptos",
    "reference_app/leptos",
    "scripts",
    "stories/*",
]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/radix"
version = "0.0.2"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.8.0"
leptos-maybe-callback = "0.2.0"
leptos-node-ref = "0.2.0"
leptos-style = "0.2.0"
leptos-typed-fallback-show = "0.2.0"
leptos_dom = "0.8.0"
leptos_router = "0.8.0"
log = "0.4.22"
radix-leptos-icons = { path = "./packages/icons/leptos", version = "0.0.2" }
radix-leptos-primitives = { path = "./packages/primitives/leptos", version = "0.0.2" }
radix-number = { path = "./packages/primitives/core/number", version = "0.0.2" }
radix-primitive = { path = "./packages/primitives/core/primitive", version = "0.0.2" }
radix-rect = { path = "./packages/primitives/core/rect", version = "0.0.2" }
radix-utils = { path = "./packages/primitives/core/utils", version = "0.0.2" }
send_wrapper = "0.6.0"
serde = "1.0.198"
serde_json = "1.0.116"
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
web-sys = "0.3.72"
