[workspace]
members = [
    "book-examples/*/*",
    "cardo_themed_app",
    "packages/primitives/leptos",
    "packages/themes/leptos",
    "reference_app/leptos",
    "reference_experiments/leptos",
    "scripts",
    "stories/leptos",
]
resolver = "2"

[workspace.package]
authors = ["Cardo UI Contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/cardo-ui/cardo-ui"
version = "0.0.2"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.8.0"
leptos-maybe-callback = "0.2.0"
leptos-node-ref = "0.2.0"
leptos-style = "0.2.0"
leptos-typed-fallback-show = "0.2.0"
leptos_dom = "0.8.0"
leptos_router = "0.8.0"
log = "0.4.22"
cardo-ui = { path = "./packages/primitives/leptos", version = "0.0.2" }
send_wrapper = "0.6.0"
serde = "1.0.198"
serde_json = "1.0.116"
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
web-sys = "0.3.72"
