[package]
name = "cardo-themed-app"
description = "Themed component showcase app demonstrating token-driven design with Cardo UI."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
log.workspace = true
cardo-ui = { workspace = true, features = ["accordion", "alert-dialog", "aspect-ratio", "avatar", "checkbox", "collapsible", "context-menu", "dialog", "dropdown-menu", "hover-card", "label", "menubar", "navigation-menu", "one-time-password-field", "password-toggle-field", "popover", "progress", "radio-group", "scroll-area", "select", "separator", "slider", "switch", "tabs", "toast", "toggle", "toggle-group", "tooltip"] }
cardo-ui-themes = { path = "../packages/themes/leptos" }
tailwind_fuse.workspace = true
wasm-bindgen = "0.2"
web-sys = { workspace = true, features = ["Document", "HtmlElement"] }
