[package]
name = "pith-themed-app"
description = "Themed component showcase app demonstrating token-driven design with Pith UI."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
log.workspace = true
pith-ui = { workspace = true, features = ["accessible-icon", "accordion", "alert-dialog", "aspect-ratio", "avatar", "calendar", "checkbox", "collapsible", "combobox", "context-menu", "dialog", "dropdown-menu", "form", "hover-card", "label", "menubar", "navigation-menu", "one-time-password-field", "password-toggle-field", "popover", "progress", "radio-group", "scroll-area", "select", "separator", "slider", "switch", "tabs", "toast", "toggle", "toggle-group", "toolbar", "tooltip"] }
chrono = { version = "0.4", features = ["wasmbind"] }
pith-ui-themes = { path = "../packages/themes/leptos" }
tailwind_fuse.workspace = true
wasm-bindgen = "0.2"
web-sys = { workspace = true, features = ["Document", "HtmlElement"] }
