[package]
name = "radix-leptos-reference-app"
description = "Leptos reference app for Radix E2E testing."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos-node-ref.workspace = true
leptos_router.workspace = true
log.workspace = true
radix-leptos-accordion.workspace = true
radix-leptos-alert-dialog.workspace = true
radix-leptos-avatar.workspace = true
radix-leptos-checkbox.workspace = true
radix-leptos-collapsible.workspace = true
radix-leptos-context-menu.workspace = true
radix-leptos-dialog.workspace = true
radix-leptos-dropdown-menu.workspace = true
radix-leptos-form.workspace = true
radix-leptos-hover-card.workspace = true
radix-leptos-menu.workspace = true
radix-leptos-navigation-menu.workspace = true
radix-leptos-popover.workspace = true
radix-leptos-progress.workspace = true
radix-leptos-radio-group.workspace = true
radix-leptos-roving-focus.workspace = true
radix-leptos-scroll-area.workspace = true
radix-leptos-select.workspace = true
radix-leptos-separator.workspace = true
radix-leptos-slider.workspace = true
radix-leptos-switch.workspace = true
radix-leptos-tabs.workspace = true
radix-leptos-toast.workspace = true
radix-leptos-toggle.workspace = true
radix-leptos-toggle-group.workspace = true
radix-leptos-toolbar.workspace = true
radix-leptos-tooltip.workspace = true
web-sys.workspace = true
