[package]
name = "cardo-ui-reference-app"
description = "Leptos reference app for Radix E2E testing."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos-node-ref.workspace = true
leptos_router.workspace = true
log.workspace = true
cardo-ui = { workspace = true, features = ["all", "internals"] }
web-sys.workspace = true
