[package]
name = "pith-ui-book-icons"
description = "Book examples for Radix Icons Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
icons = ["pith-ui/icons"]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
pith-ui.workspace = true
