[package]
name = "radix-leptos-book-primitives"
description = "Book examples for Radix Primitives Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "aspect-ratio",
    "avatar",
    "checkbox",
    "label",
    "progress",
    "separator",
    "switch",
    "toggle",
]
aspect-ratio = ["dep:radix-leptos-primitives"]
avatar = ["dep:radix-leptos-primitives"]
checkbox = ["dep:radix-leptos-primitives"]
label = ["dep:radix-leptos-primitives"]
progress = ["dep:radix-leptos-primitives"]
separator = ["dep:radix-leptos-primitives"]
switch = ["dep:radix-leptos-primitives"]
toggle = ["dep:radix-leptos-primitives"]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
radix-leptos-primitives = { workspace = true, optional = true, features = ["all"] }
