[package]
name = "cardo-ui-book-primitives"
description = "Book examples for Radix Primitives Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "aspect-ratio",
    "avatar",
    "checkbox",
    "label",
    "progress",
    "separator",
    "switch",
    "toggle",
]
aspect-ratio = ["dep:cardo-ui"]
avatar = ["dep:cardo-ui"]
checkbox = ["dep:cardo-ui"]
label = ["dep:cardo-ui"]
progress = ["dep:cardo-ui"]
separator = ["dep:cardo-ui"]
switch = ["dep:cardo-ui"]
toggle = ["dep:cardo-ui"]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
cardo-ui = { workspace = true, optional = true, features = ["all"] }
