[package]
name = "pith-ui-book-primitives"
description = "Book examples for Radix Primitives Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "aspect-ratio",
    "avatar",
    "checkbox",
    "label",
    "progress",
    "separator",
    "switch",
    "toggle",
]
aspect-ratio = ["dep:pith-ui"]
avatar = ["dep:pith-ui"]
checkbox = ["dep:pith-ui"]
label = ["dep:pith-ui"]
progress = ["dep:pith-ui"]
separator = ["dep:pith-ui"]
switch = ["dep:pith-ui"]
toggle = ["dep:pith-ui"]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
pith-ui = { workspace = true, optional = true, features = ["all"] }
